[tool.poetry]
name = "ps5-stock"
version = "0.1.0"
description = ""
authors = ["Jamie Stewart <jamie.stewart5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pushover = "^0.5"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
ipdb = "^0.13.9"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120